Create new project for annotation server #36
update db config and sample request.

--- a/MyAnnotation/src/main/resources/application.properties
+++ b/MyAnnotation/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.application.name=MyAnnoation
 # mongo "mongodb+srv://cluster0-yxhas.mongodb.net/test"  --username mateskarayol
 
 
-spring.data.mongodb.uri=mongodb+srv://mateskarayol:mateskarayol@cluster0-yxhas.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://mateskarayol:mateskarayol@cluster0-yxhas.mongodb.net/mystream_annodb?retryWrites=true&w=majority
 
 spring.servlet.multipart.max-file-size=256MB
 spring.servlet.multipart.max-request-size=256MB
