Solve Cross Origin Problem between Annotation server and front-end #96

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 
 .idea/workspace.xml
 mystream/.idea/workspace.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/mystream.iml
+.idea/vcs.xml
+mystream/.idea/vcs.xml
+mystream/.idea/mystream.iml
+mystream/.idea/modules.xml
+mystream/.idea/misc.xml
+mystream/.idea/inspectionProfiles/profiles_settings.xml
